--- a/client/public/main.css
+++ b/client/public/main.css
@@ -15,3 +15,8 @@ body {
     width: 100%;
   }
   
+  button:hover {
+    background-color: #4CAF50; /* Grön */
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
+}
