--- a/client/public/main.css
+++ b/client/public/main.css
@@ -46,3 +46,36 @@ form {
     margin-right: auto;
     text-align: center;
 }
+
+#rememberUser:checked {
+  background-color: #4caf50;
+  border-color: black;
+  animation: remember-me-check;
+  animation-duration: 2s;
+}
+
+#rememberUser {
+  border-color: gray;
+}
+
+@keyframes remember-me-check {
+  0% {
+    background-color: white;
+  }
+
+  25% {
+    background-color: #8aaf8c;
+  }
+
+  50% {
+    background-color: #76ad79;
+  }
+
+  75% {
+    background-color: #66ad69;
+  }
+
+  100% {
+    background-color: #4caf50;
+  }
+}
